--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@
   font-style: normal;
   font-family: "Plus Jakarta Sans", sans-serif;
   font-weight: 700;
+  user-select: none;
   color: #fff;
 }
 
