--- a/css/style.css
+++ b/css/style.css
@@ -867,6 +867,7 @@ header ul li a {
 
 .titleup-detail {
 	color: #ffffff;
+	background: #1F242A;
 	text-align: center;
 }
 
@@ -1119,7 +1120,7 @@ img {
 
 .card-container {
 	display: flex;
-	margin-left: 60px;
+	margin-left: 0px;
 	gap: 15px;
 	flex-wrap: wrap;
 	justify-content: start;
@@ -1129,9 +1130,11 @@ img {
 	display: flex;
 	margin-left: 20px;
 	gap: 10px;
-	margin-right: 30px;
-	flex-wrap: wrap;
-	justify-content: space-evenly;
+	
+	margin-right: 0px;
+	flex-direction:  column;
+	
+	justify-content: center;
 }
 
 .card-up {
