--- a/css/style.css
+++ b/css/style.css
@@ -906,7 +906,7 @@ header ul li a {
 }
 
 .container {
-	width: 80%;
+	width: 100%;
 	margin: 0 auto;
 	
 }
@@ -969,6 +969,7 @@ span {
 	padding: 15px;
 	box-shadow: 0 10px 80px rgba(0, 0, 0, 0.103);
 	box-sizing: border-box;
+	width: 100%;
 	margin-top: 10px;
 	border-radius: 25px;
 	display: block;
@@ -1182,11 +1183,13 @@ img {
 /* upcoming theater */
 
 .poster-event {
-	width: 100%;
-	max-width: 400px;
+	width: 200px;
+	
+	object-fit: cover;
 	border-radius: 15px;
 	box-shadow: 0 10px 80px rgba(0, 0, 0, 0.137);
 	margin-bottom: 16px;
+	
 }
 
 .row-detail:hover .poster-event {
@@ -1200,42 +1203,32 @@ img {
 .card-container {
 	display: flex;
 	margin-left: 0px;
-	gap: 15px;
 	flex-wrap: wrap;
-	justify-content: start;
+	gap: 0px;
+	width: 100%;
+	justify-content: left; 
+	align-items: left;
 }
 
 .card-container-recent {
 	display: flex;
-	margin-left: 20px;
+	margin-left: 0px;
 	gap: 10px;
-	
+	flex-wrap: wrap;
 	margin-right: 0px;
 	flex-direction:  column;
 	
-	justify-content: center;
+	justify-content: left;
 }
 
-.card-up {
-	position: relative;
-	background-color: #474747;
-	border-radius: 15px;
-	padding: 16px;
-	width: 299px;
-	height: auto;
-	max-width: 500px;
-	margin-bottom: 16px;
-	display: flex;
-	flex-direction: column;
-	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-	/* border: 1px solid #83b4ff;  */
-}
+
 .card-up-recent {
 	background-color: #313131;
 	border-radius: 15px;
 	padding: 16px;
 	width: 299px;
 	height: auto;
+	font-size: 12px;
 	max-width: 500px;
 	margin-bottom: 16px;
 	display: flex;
@@ -1246,7 +1239,7 @@ img {
 
 .card-up h3 {
 	margin-bottom: 8px;
-	font-size: 15px;
+	font-size: 10px;
 	color: #ffff;
 }
 
@@ -1273,13 +1266,13 @@ img {
 }
 
 .btnn h1:hover {
-	background-color: #3D4047;
+	background-color: #373B44;
 	cursor: pointer;
 	color: #fff;
 }
 
 .btnn h1:active {
-	background-color: #2c3b64;
+	background-color: #323336;
 	color: #fff;
 }
 
@@ -1292,14 +1285,14 @@ img {
 }
 
 .card-up h2 {
-	position: absolute;
-	top: 25px;
+	
+	top: 15px;
 	left: 30px;
 	background-color: rgba(85, 99, 136, 0.836);
 	padding: 5px 10px;
 	border-radius: 5px;
 	font-weight: 800;
-	font-size: 16px;
+	font-size: 12px;
 }
 
 .card-up .btnn a {
