--- a/css/style.css
+++ b/css/style.css
@@ -482,7 +482,7 @@ a {
 .card-nowlive-container-up {
 	display: flex;
 	flex-wrap: wrap;
-	justify-content: start;
+	flex-direction: row-reverse;
 }
 
 .card-nowlive {
@@ -492,7 +492,7 @@ a {
 	margin-left: 35px;
 	display: flex;
 	flex-wrap: wrap;
-	justify-content: space-between;
+	flex-direction: row-reverse;
 	color: #fff;
 	background-color: #4b5f83;
 	border-radius: 20px;
@@ -505,7 +505,7 @@ a {
 	margin-left: 35px;
 	display: flex;
 	flex-wrap: wrap;
-	justify-content: space-between;
+	flex-direction: row-reverse;
 	color: #fff;
 	background-color: #4b5f83;
 	border-radius: 20px;
