--- a/css/style.css
+++ b/css/style.css
@@ -2249,8 +2249,8 @@ footer a:hover {
   border-radius: 8px;
   padding-top: 10px;
   padding-bottom: 10px;
-  padding-right: 20px;
-  padding-left: 20px;
+  padding-right: 15px;
+  padding-left: 15px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
@@ -2262,7 +2262,7 @@ footer a:hover {
   margin-bottom: 8px;
 }
 
-.birthday-info h3, .birthday-info h4, .birthday-info h5 {
+.birthday-info h3, .birthday-info span, .birthday-info h4, .birthday-info h5 {
   margin: 5px 0;
   font-size: 14px;
 }
@@ -2273,7 +2273,7 @@ footer a:hover {
 }
 
 .birthday-info h4 {
-  color: #777;
+  color: rgba(181, 181, 181, 0.57);
   font-size: 12px;
 }
 
