--- a/css/style.css
+++ b/css/style.css
@@ -2281,4 +2281,41 @@ footer a:hover {
   color: #f04e30;
   font-size: 12px;
 }
+
+        .card-th {
+            background-color: #2a2a2a;
+            border-radius: 10px;
+            overflow: hidden;
+            width: 90%;
+            position: relative;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            display: flex;
+            flex-direction: column;
+            padding: 10px;
+            
+        }
+
+        .card-th-content {
+            padding: 16px;
+        }
+        .card-th-content h2 {
+            margin: 0;
+            font-size: 1.5em;
+        }
+        .card-th-content p {
+            margin: 8px 0;
+            color: #b0b0b0;
+        }
+        .members-th {
+            background-color: #1e73e8;
+            color: #ffffff;
+            border-radius: 20px;
+            padding: 5px 10px;
+            display: inline-block;
+            font-size: 0.9em;
+            position: absolute;
+            right: 16px;
+            bottom: 16px;
+        }
+ 
 }
