--- a/css/style.css
+++ b/css/style.css
@@ -212,8 +212,8 @@ body {
 }
 
 .btn {
-	background-color: #7289da;
-	padding: 10px 20px;
+	background-color: #25272F;
+	padding: 20px 20px;
 	color: #ffffff;
 	text-decoration: none;
 	border-radius: 5px;
@@ -227,7 +227,7 @@ body {
 }
 
 .btn:hover {
-	background-color: #677bc4;
+	background-color: #3F424C;
 }
 
 .setlist-title {
@@ -1146,7 +1146,7 @@ img {
 .row1 {
 	display: flex;
 	flex-wrap: wrap;
-	margin-right: 15px;
+	width: 100%;
 	color: #fff;
 }
 
@@ -2127,7 +2127,7 @@ footer a:hover {
 
 	.btn {
 		font-size: 14px;
-		background:   #1F242A;
+		background:   #1E2228;
 	}
 
 	#noLiveMessage,
