--- a/css/style.css
+++ b/css/style.css
@@ -367,8 +367,8 @@ a {
 	color: #fff;
 	border: none;
 	cursor: pointer;
-	width: 150px;
-	margin: 4px;
+	
+	
 }
 
 
@@ -720,10 +720,12 @@ a {
 .row3 {
 	display: flex;
 	flex-wrap: wrap;
-	justify-content: start;
-	margin-left: 20px;
+	justify-content: left;
+	
 	align-items: center;
-	gap: 13px;
+	width: 95%;
+	gap: 20px;
+	margin-left: 5px;
 }
 
 /* record start */
@@ -758,7 +760,9 @@ a {
 	margin-top: 10px;
 	border-radius: 10px;
 	color: #fff;
-	background-color: #83b4ff;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 	padding: 5px 10px;
 }
 
@@ -806,6 +810,7 @@ a {
 	width: 120px;
 	height: auto;
 	margin: 10px;
+	
 }
 
 .date {
@@ -1418,6 +1423,7 @@ img {
 	margin-bottom: 10px;
 	margin-top: 10px;
 	flex-direction: column;
+	width: 100%;
 	align-items: center;
 }
 
