--- a/css/style.css
+++ b/css/style.css
@@ -91,7 +91,37 @@ body {
   transition: background-color 0.2s ease;
   border-radius: 30px 30px 30px 30px;
 }
+        .header_app{
 
+               position: fixed;
+
+               top: 0;
+               left: 0;
+               width: 100%;
+               height: 60px;
+               display: flex;
+               border-bottom: 1px #000000A3 solid;
+               z-index: 999999;
+               background-color: #171C28C4;
+               backdrop-filter: blur(7px);
+        }
+        .header_logo{
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                width:100%;
+                
+        }
+        .header_logo img{
+               width: 60px;
+               
+        }
+        .header_logo span{
+                color: white;
+                margin-right: auto;
+                font-size: 40px;
+                margin-left: 15px;
+        }
 .overlay-navbar.active {
   background-color: rgba(255, 255, 255, 0.5);
 }
