--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,7 @@ hr {
 }
 
 body {
-	background-color: #1A1A1F;
+	background-color: #171C28;
 }
         .navbar-container{
                 position: fixed;
@@ -37,7 +37,7 @@ body {
                 z-index: 99999;
                 width: 100%;
                 height: 60px;
-                background: #303032;
+                background: #171C28;
                 display: flex;
                 gap: 15px;
                 justify-content: center;
