--- a/css/style.css
+++ b/css/style.css
@@ -2340,7 +2340,7 @@ footer a:hover {
 }
 
         .card-th {
-            background-color: #2a2a2a;
+            background-color: #2A3347;
             border-radius: 15px;
             overflow: hidden;
             width: 90%;
