--- a/css/style.css
+++ b/css/style.css
@@ -2374,5 +2374,29 @@ footer a:hover {
             right: 16px;
             bottom: 16px;
         }
- 
+.animated-gradient {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  
+  padding: 5px 10px;
+  border-radius: 5px;
+  background: linear-gradient(90deg, blue, #FF1493, red); /* Deep pink (#FF1493) */
+  background-size: 200% 100%;
+  animation: gradient-slide 3s ease-in-out infinite;
+  color: white; /* Agar teks terlihat jelas */
+  border: none;
+}
+
+@keyframes gradient-slide {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
 }
