--- a/css/style.css
+++ b/css/style.css
@@ -392,7 +392,7 @@ a {
 	justify-content: center;
 	align-items: center;
 	padding: 8px 15px;
-	background-color: #1F242A;
+	background-color: #2A3347;
 	border-radius: 10px;
 	color: #fff;
 	border: none;
