--- a/css/style.css
+++ b/css/style.css
@@ -2399,4 +2399,16 @@ footer a:hover {
     background-position: 0% 50%;
   }
 }
+.status-th-box {
+  background-color: #FFB91D;
+  color: #ffffff;
+  border-radius: 20px;
+  padding: 5px 10px;
+  display: inline-block;
+  font-size: 1em;
+  position: absolute;
+  top: 15px; /* Geser ke atas */
+  left: 12%;  /* Posisikan di tengah secara horizontal */
+  transform: translateX(-50%); /* Koreksi posisi agar benar-benar di tengah */
+}
 }
