--- a/css/style.css
+++ b/css/style.css
@@ -2431,6 +2431,24 @@ footer a:hover {
     background-position: 0% 50%;
   }
 }
+@keyframes gradient-random {
+  0% {
+    background-position: 0% 50%;
+  }
+  25% {
+    background-position: 30% 70%;
+  }
+  50% {
+    background-position: 80% 30%;
+  }
+  75% {
+    background-position: 20% 90%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
+
 .status-th-box {
   background-color: #FFB000;
   color: #ffffff;
@@ -2453,6 +2471,20 @@ footer a:hover {
   position: absolute;
   top: 15px; /* Geser ke atas */
   left: 12%;  /* Posisikan di tengah secara horizontal */
+  transform: translateX(-50%);
+}
+.status-sedang-berlangsung {
+  background: linear-gradient(90deg, blue, #FF1493, red); /* Deep pink (#FF1493) */
+  background-size: 200% 100%;
+  animation: gradient-random 3s ease-in-out infinite;
+  color: #ffffff;
+  border-radius: 20px;
+  padding: 5px 10px;
+  display: inline-block;
+  font-size: 1em;
+  position: absolute;
+  top: 15px; /* Geser ke atas */
+  left: 23%;  /* Posisikan di tengah secara horizontal */
   transform: translateX(-50%);
 }
 }
