--- a/css/style.css
+++ b/css/style.css
@@ -2479,6 +2479,7 @@ footer a:hover {
   animation: gradient-random 3s ease-in-out infinite;
   color: #ffffff;
   border-radius: 20px;
+  box-shadow: 1px black;
   padding: 5px 10px;
   display: inline-block;
   font-size: 1em;
