--- a/css/style.css
+++ b/css/style.css
@@ -1145,7 +1145,8 @@ span {
 /* titleup start */
 .titleup {
 	text-align: center;
-	font-size: 25px;
+	font-size: 20px;
+	font-family: 'Quicksand';
 }
 
 .section .titleup h1 {
@@ -2332,6 +2333,7 @@ footer a:hover {
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
   text-align: center;
   background-color: transparent; /* Warna background opsional */
   border: 1px solid #ddd;
